Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/TryWithResources/TwrFlow.out
TwrFlow.java:14:11: compiler.err.except.never.thrown.in.try: java.io.IOException
TwrFlow.java:12:21: compiler.err.unreported.exception.implicit.close: CustomCloseException, twrFlow
2 errors
